sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: not found: value ||
    while (j!=1)||(marqueur) {
                ^