sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var n = getNombreValeurs()
  var v = 8
  var marqueur = false
  var j=0
  for (i <- 1 to (n-1)) {
    v = getValeur(i)
    j=i
    marqueur=false
    while (j!=1)||(marqueur) {
       if (getValeur(j)>v) {
         copie(j-1,j)
         j=j-1
       } else {
         setValeur(j+1,v)
         j=1
         marqueur=true
       }    
    }
  }
}